# UCI-Heart-Disease-Project

./: .gitignore  README.md  V1.py  main.py  pyproject.toml  review.md
outputs/: shap_importance.csv
